objects/RIT_SMETeam__c.object
<CustomObject>
    <fields>
        <fullName>DetailedComments__c</fullName>
        <description>SR0 - Field to store the Detailed Comment related to the role associated to the SME Team Member</description>
        <label>Detailed Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MemberActivated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SR0 - Checkbox indicating if the SME Team member is activated or not</description>
        <label>Member Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberRole__c</fullName>
        <description>SR0 - Role associated to the SME</description>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BU Contributor</fullName>
                </value>
                <value>
                    <fullName>Controlling</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Purchases</fullName>
                </value>
                <value>
                    <fullName>Risk Management Team</fullName>
                </value>
                <value>
                    <fullName>Solution Architect</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteLink__c</fullName>
        <label>Quote Link</label>
        <referenceTo>OPP_QuoteLink__c</referenceTo>
        <relationshipName>SMETeams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMEBU__c</fullName>
        <formula>CASE(TEXT(TeamMember__r.UserBusinessUnit__c), 
&apos;BD&apos;,&apos;EcoBuildings&apos;, 
&apos;BI&apos;,&apos;Building &amp; IT&apos;, 
&apos;CMO&apos;,&apos;Global Marketing&apos;, 
&apos;COP&apos;,&apos;China Operations&apos;, 
&apos;EN&apos;,&apos;Energy&apos;, 
&apos;FIN&apos;,&apos;Finance &amp; Control&apos;, 
&apos;FLS&apos;,&apos;Field Services&apos;, 
&apos;GC&apos;,&apos;Cloud Services&apos;, 
&apos;GHR&apos;,&apos;Global Human Resource&apos;, 
&apos;GMA&apos;,&apos;Corporate General Management&apos;, 
&apos;GOP&apos;,&apos;Global Operations&apos;, 
&apos;GS&apos;,&apos;Global Solutions&apos;, 
&apos;GSC&apos;,&apos;Global Supply Chain&apos;, 
&apos;GW&apos;,&apos;Software&apos;, 
&apos;IA&apos;,&apos;Process Automation&apos;, 
&apos;IB&apos;,&apos;Industry OEM-BIC&apos;, 
&apos;ID&apos;,&apos;Industry&apos;, 
&apos;IPO&apos;,&apos;Information, Process and Organization&apos;, 
&apos;IT&apos;,&apos;IT&apos;, 
&apos;NOP&apos;,&apos;North America Operations&apos;, 
&apos;PP&apos;,&apos;Partner Projects&apos;, 
&apos;PR&apos;,&apos;Retail&apos;, 
&apos;PS&apos;,&apos;Energy and Sustainability&apos;, 
&apos;SAI&apos;,&apos;Strategy &amp; Technology&apos;, 
&apos;SCS&apos;,&apos;Strategic Customers and Segments&apos;, 
&apos;SO&apos;,&apos;Solar&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SME Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMEFeedback__c</fullName>
        <description>DECEMBER RELEASE - This Custom field stores overall comments.</description>
        <label>SME Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMERecommendationStatusFormula__c</fullName>
        <description>DECEMBER RELEASE - This field is to display the SME Recommendation Status with image.</description>
        <formula>IF( ISPICKVAL(SMERecommendationStatus__c,  &apos;Not yet reviewed&apos; ) , IMAGE(&quot;/resource/STR031_SMERecomNotYetRev&quot;,&quot;Not yet reviewed&quot;,20,170), IF( ISPICKVAL(SMERecommendationStatus__c, &quot;Favorable&quot;), IMAGE(&quot;/resource/STR032_SMERecomFav&quot;,&quot;Favorable&quot;,20,170 ),IF(ISPICKVAL(SMERecommendationStatus__c, &quot;Unfavorable&quot;), IMAGE(&quot;/resource/STR033_SMERecomUnfav&quot;,&quot;Unfavorable&quot; ,20,170),IF(ISPICKVAL(SMERecommendationStatus__c, &quot;Risk needing attention&quot;), IMAGE(&quot;/resource/STR034_SMERecomRskNeedAttn&quot;,&quot;Risk needing attention&quot;,20,170 ),&apos; &apos;))))</formula>
        <label>SME Recommendation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMERecommendationStatus__c</fullName>
        <description>DECEMBER RELEASE - This custom field is to display the SME Recommendation Status.</description>
        <label>SME Recommendation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet reviewed</fullName>
                    <default>true</default>
                    <label>Not yet reviewed</label>
                </value>
                <value>
                    <fullName>Favorable</fullName>
                </value>
                <value>
                    <fullName>Unfavorable</fullName>
                </value>
                <value>
                    <fullName>Risk needing attention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMETeamsMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SME Team Member</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SME Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SME Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>